Your commit message

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="LS CRM" />
-    <link rel="apple-touch-icon" href="/placeholder.svg" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
 
     <title>Laptop Store CRM</title>
   </head>
